--- a/config/solr.yml
+++ b/config/solr.yml
@@ -2,6 +2,8 @@
 # edit the fedora.yml file to match the solr URL for active-fedora. 
 development:
   url: http://localhost:8983/solr/development
+tdldev:
+  url: http://dev-search01.lib.tufts.edu/solr/development
 test: &TEST
   url: http://127.0.0.1:8983/solr/test
 cucumber:
