A second predicate mapping for the isPartof currently-existing relationships, and a test fixture with that spelling of the relationship.

--- a/config/predicate_mappings.yml
+++ b/config/predicate_mappings.yml
@@ -47,6 +47,7 @@
     :reports_to: reportsTo
     :has_report: hasReport
     :is_part_of: isPartOf
+    :is_part_of_legacy: isPartof
     :has_part: hasPart
     :is_member_of: isMemberOf
     :has_member: hasMember
