--- a/config/fedora.yml
+++ b/config/fedora.yml
@@ -15,8 +15,8 @@ test: &TEST
     url: http://localhost:8983/solr/test
 production:
   fedora:
-    url: http://fedoraAdmin:fedoraAdmin@your.production.server:8080/fedora
+    url: http://fedoraAdmin:fedoraAdmin@127.0.0.1:8983/fedora
   solr:
-    url: http://your.production.server:8080/solr 
+    url: http://localhost:8983/solr/development
 cucumber:
   <<: *TEST
