--- a/config/solr.yml
+++ b/config/solr.yml
@@ -9,4 +9,4 @@ test: &TEST
 cucumber:
   <<: *TEST
 production:
-  url: http://your.production.server:8080/bl_solr/core0 
+  url: http://localhost:8983/solr/development
