--- a/config/predicate_mappings.yml
+++ b/config/predicate_mappings.yml
@@ -56,6 +56,7 @@
     :is_associated_with: isAssociatedWith
     :is_child_of: isChildOf
     :is_parent_of: isParentOf
+    :is_parent_of_case: isParentof
     :is_cousin_of: isCousinOf
     :is_sibling_of: isSiblingOf
     :is_spouse_of: isSpouseOf
