--- a/config/application.yml
+++ b/config/application.yml
@@ -14,6 +14,9 @@ development:
 tdldev:
   <<: *defaults
   local_object_store: "/tdr"
+stage:
+  <<: *defaults
+  local_object_store: "/tdr"
 test:
   <<: *defaults
   local_object_store: "/tdr"
