there's an object on stage with a createdBy predicate in the RDF.

--- a/config/predicate_mappings.yml
+++ b/config/predicate_mappings.yml
@@ -39,6 +39,7 @@
     :is_part_of: isPartOf
     :is_subset_of: isSubsetOf
     :is_topic_of: isTopicOf
+    :created_by: createdBy
   info:fedora/fedora-system:def/model#:
     :has_model: hasModel
   http://www.openarchives.org/OAI/2.0/: 
