--- a/config/application.yml
+++ b/config/application.yml
@@ -6,27 +6,31 @@ defaults: &defaults
   tdl_feedback_subject: "TDL Content Feedback"
   local_object_store: "#{Rails.root}/local_object_store"
   trim_bucket_url: "http://bucket01.lib.tufts.edu"
-
+  processing_url: "http://processing01.lib.tufts.edu:8080/"
 development:
   <<: *defaults
   neat_setting: 800
-
+  processing_url: "SKIP"
 tdldev:
   <<: *defaults
   pdf_pages:
     page_location: "/tdr"
   local_object_store: "/tdr"
+  processing_url: "http://dev-processing01.lib.tufts.edu:8080/"
 stage:
   <<: *defaults
   local_object_store: "/tdr"
+  processing_url: "http://stage-processing01.lib.tufts.edu:8080/"
 test:
   <<: *defaults
   pdf_pages:
     page_location: "/tdr"
   local_object_store: "/tdr"
+  processing_url: "http://stage-processing01.lib.tufts.edu:8080/"
 production:
   <<: *defaults
   pdf_pages:
     page_location: "/tdr"
   tdl_feedback_address: "deborah.kaplan@tufts.edu"
   local_object_store: "/tdr"
+  processing_url: "http://processing01.lib.tufts.edu:8080/"
