--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,10 @@
 # SQLite version 3.x
 #   gem install sqlite3
+stage:
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
 tdldev:
   adapter: sqlite3
   database: db/development.sqlite3
