--- a/config/application.yml
+++ b/config/application.yml
@@ -2,6 +2,8 @@
 defaults: &defaults
   pdf_pages:
     page_location: "#{Rails.root}/pdf_pages"
+  png_pages:
+    page_location: "#{Rails.root}/pdf_pages"
   tdl_feedback_address: "brian.goodmon@tufts.edu"
   tdl_feedback_subject: "TDL Content Feedback"
   local_object_store: "#{Rails.root}/local_object_store"
@@ -24,6 +26,8 @@ stage:
   <<: *defaults
   pdf_pages:
     page_location: "/tdr"
+  png_pages:
+    page_location: "/tdr"
   local_object_store: "/tdr"
   processing_url: "http://stage-processing01.lib.tufts.edu:8080"
   repository_url: "http://stage-repository01.lib.tufts.edu:8080"
@@ -31,12 +35,16 @@ test:
   <<: *defaults
   pdf_pages:
     page_location: "/tdr"
+  png_pages:
+    page_location: "/tdr"
   local_object_store: "/tdr"
   processing_url: "http://stage-processing01.lib.tufts.edu:8080"
   repository_url: "http://stage-repository01.lib.tufts.edu:8080"
 production:
   <<: *defaults
   pdf_pages:
+    page_location: "/tdr"
+  png_pages:
     page_location: "/tdr"
   tdl_feedback_address: "deborah.kaplan@tufts.edu"
   local_object_store: "/tdr"
