--- a/config/application.yml
+++ b/config/application.yml
@@ -29,7 +29,7 @@ stage:
     page_location: "/tdr"
   png_pages:
     page_location: "/tdr"
-  pngizer_failure_address: "dldev.elist.tufts.edu"
+  pngizer_failure_address: "dldev@elist.tufts.edu"
   local_object_store: "/tdr"
   processing_url: "http://stage-processing01.lib.tufts.edu:8080"
   repository_url: "http://stage-repository01.lib.tufts.edu:8080"
@@ -48,7 +48,7 @@ production:
     page_location: "/tdr"
   png_pages:
     page_location: "/tdr"
-  tdl_feedback_address: "dl_feedback.elist.tufts.edu"
+  tdl_feedback_address: "dl_feedback@elist.tufts.edu"
   local_object_store: "/tdr"
   processing_url: "http://processing01.lib.tufts.edu:8080"
   repository_url: "http://repository01.lib.tufts.edu:8080"
